--- a/templates/home.html
+++ b/templates/home.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Home Page</title>
-</head>
-<body>
-	<h3>
-		Welcome home!
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Home Page</title>
+  </head>
+  <body>
+    <h3>
+		{# this won't be rendered #}
+		{% if name == 'admin'%} 
+			admin
+		{% else %} 
+			Welcome home {{ name | upper }}...!
+		{% endif %} 
 	</h3>
-</body>
+  </body>
 </html>
